--- a/themes/bootstrap/style.css
+++ b/themes/bootstrap/style.css
@@ -34,8 +34,28 @@ input[type="radio"], input[type="checkbox"] {
 .navbar-maxon {
 	background-color: #D9E5F0;
 	color:#fff;
-	border:1px solid black;
+	border:1px solid transparent;
+    border-bottom: 1px solid #bfcee6;
+	
 }
+.sidebar {
+	background: #f5f5f5;
+	padding-top:10px;
+ 
+	height:auto;
+	padding:0px;
+	
+}
+.sidebar .panel .panel-body {
+    background-color: #f5f5f5;
+}
+.alert-info {
+    color: #31708f;
+    background-color: #f5f5f5;
+    border-color: #bce8f1;
+}
+
+
  
 .clear				{ clear: both; }
 .container {
@@ -732,3 +752,24 @@ padding-left: 5px;
 .msg-inbox {
 	pointer:cursor;
 }
+
+
+.panel-header, .panel-body {
+    border-color: #D2D2F9;
+}
+.panel-body-min {
+    padding: 2px;
+	--padding-top:10px;
+}
+.thumbnail {
+	margin-bottom:3px;
+} 
+.panel-body {
+    padding: 3px;
+}
+.navbar {
+    margin-bottom: 2px;
+}
+   
+
+
